--- a/vans/public/css/footer.css
+++ b/vans/public/css/footer.css
@@ -1,8 +1,8 @@
+
 .footer_bg{
     width: 100%;
     height: 471px;
-    background-color: black;}
-.footer_bg:before{
+    background-color:#000;
     display: table;
     content: " ";
     clear: both;
@@ -94,6 +94,17 @@
     margin-top: 40px;
     margin-left: 23px;
 }
+.ImgLogo{
+    display: flex;
+    text-decoration: none;
+    float: left;
+    margin-left: 75px;
+    margin-top:30px;
+}
+.ImgLogo>li{
+    margin-right:20px;
+}
+
 .footer_bottom{
     width: 1440px;
     min-height: 91px;
@@ -103,10 +114,11 @@
 }
 .img_width{
     width: 222px;
-    height: 91px;
+    height: 191px;
     float: left;
-    margin-bottom: 10px;
-    margin-right: 40px;
+    margin-top:-90px;
+    margin-left: -50px;
+    margin-right: 30px;
 }
 .bottom_color{
     color: #919191;
@@ -125,19 +137,5 @@
     text-decoration:none
 }
 
-.menu{
-    color: black;
-    padding: 0 10px;
-    height: 45px;
-    line-height: 41px;
-}
-.menu:hover{
-    text-decoration:none ;
-    color : black;
-}
-.top_menu{
-    overflow-y: scroll;
-    width: 200px;
-    height: 400px;
 
-}
+
