--- a/vans/public/css/index.css
+++ b/vans/public/css/index.css
@@ -1,42 +1,12 @@
-.my_header{  width: 100%;}
-.my_footer{  width: 100%;height: 500px;
-    margin-top: 10px;
-}
-.xt_img{
-    width: 100%;
+.active{
     display: flex;
-    float: left;
+    width: 2900px;
 }
-div.xt_img div{
-    margin-right: 30px;
+.active>li>img{
+    width: 432px;
+    height: 432px;
 }
-.first_img{
-    margin-left: 40px;
-}
-.text1,.text3{
-    position: absolute;
-    color: #ffffff;
-    margin-top: -12%;
-    margin-left: 9.3%;
-}
-.text2{
-    position: absolute;
-    margin-top: -12%;
-    margin-left: 8%;
-    color: #ffffff;
-}
-.p1,.p2,.p3{
-    color: #ffffff;
-    font-size: 20px;
-    font-weight: bold;
-}
-.p2,.p3{
-    position: absolute;
-    margin-top: -8%;
-    margin-left: 12%;
-}
-.p1{
-    position: absolute;
-    margin-top: -8%;
-    margin-left: 12.5%;
+.active1{
+    display: flex;
+    width: 1450px;
 }
