--- a/vans/public/css/comm.css
+++ b/vans/public/css/comm.css
@@ -2,7 +2,7 @@ body, h1, h2, h3, h4, h5, h6, hr, p, dl, dt, dd, ul, ol, li, pre, form, fieldset
 body, button, input, select,
 
 ul, ol{   list-style:none;}
-a{text-decoration:none; }
+a{text-decoration:none !important; }
 a:hover {text-decoration:underline;	}
 img{ border:0;}
 button,input, select,textarea{ font-size:100%; }
